Update img classes

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div class="carousel-content-container">
           <div class="left-arrow arrow-container"></div>
           <div class="img-container">
-            <img class="curr-img" src="./images/carousel-imgs/img-2.jpeg" alt="curr-img"></img>
+            <img class="program-img curr-img" alt="curr-img"></img>
           </div>
           <div class="right-arrow arrow-container"></div>
         </div>
