--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,15 @@
         <div class="carousel-content-container">
           <div class="left-arrow arrow-container"></div>
           <div class="img-container">
-            <img class="program-img curr-img" alt="curr-img"></img>
+            <img class="program-img curr-img" src="images/carousel-imgs/img-1.jpeg"></img>
+            <img class="program-img new-img" src="images/carousel-imgs/img-2.jpeg"></img>
+            <img class="program-img new-img" src="images/carousel-imgs/img-3.jpeg"></img>
+            <img class="program-img new-img" src="images/carousel-imgs/img-4.jpeg"></img>
+            <img class="program-img new-img" src="images/carousel-imgs/img-5.jpeg"></img>
           </div>
           <div class="right-arrow arrow-container"></div>
         </div>
         <div class="navigation-rectangles-container">
-          <div class="navigation-rect"></div>
-          <div class="navigation-rect"></div>
-          <div class="navigation-rect"></div>
-          <div class="navigation-rect"></div>
-          <div class="navigation-rect"></div>
         </div>
       </div>
     </div>
