--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
       </div>
       <div class="carousel-container">
         <div class="carousel-content-container">
-          <div class="left-arrow arrow-container"></div>
+          <div class="left-arrow arrow-container">
+            <img src="images/icons/arrow-white.png" class="arrow-img">
+          </div>
           <div class="img-container">
             <img class="program-img curr-img" src="images/carousel-imgs/img-1.jpeg"></img>
             <img class="program-img new-img" src="images/carousel-imgs/img-2.jpeg"></img>
@@ -22,7 +24,9 @@
             <img class="program-img new-img" src="images/carousel-imgs/img-4.jpeg"></img>
             <img class="program-img new-img" src="images/carousel-imgs/img-5.jpeg"></img>
           </div>
-          <div class="right-arrow arrow-container"></div>
+          <div class="right-arrow arrow-container">
+            <img src="images/icons/arrow-white.png" class="arrow-img rotateimg180">
+          </div>
         </div>
         <div class="navigation-rectangles-container">
         </div>
